--- a/src/Components/Card/Card.scss
+++ b/src/Components/Card/Card.scss
@@ -2,11 +2,18 @@
   display: inline-block;
   border: white 2px solid;
   color: white;
-  height: 250px;
+  // height: 250px;
   width: 200px;
+  margin: 15px;
+  padding: 10px;
+  background-color: rgb(41, 41, 41);
 }
 
 .active {
   background-color: yellow;
   color: black;
+}
+
+.residents-list {
+  display: inline;
 }
