--- a/src/Components/App/App.scss
+++ b/src/Components/App/App.scss
@@ -1,4 +1,7 @@
+@import url('https://fonts.googleapis.com/css?family=Russo+One');
+
 .App {
   background: black;
   height: 100%;
+  font-family: 'Russo One', arial, sans-serif;
 }
