--- a/src/Components/Card/Card.scss
+++ b/src/Components/Card/Card.scss
@@ -1,12 +1,75 @@
+@import url('https://fonts.googleapis.com/css?family=Russo+One');
+
 .card {
   display: inline-block;
-  border: white 2px solid;
-  color: white;
-  // height: 250px;
-  width: 200px;
-  margin: 15px;
+  border: white 3px solid;
+  border-radius: 15px;
+  -moz-border-radius: 20px;
+  color: black;
+  font-weight: bold;
+  width: 275px;
+  height: 415px;
+  margin: 25px;
   padding: 10px;
   background-color: rgb(41, 41, 41);
+  transition-duration: 0.3s;
+  background-image: url('../../images/hallway.jpeg');
+  background-repeat: no-repeat;
+  background-size: 100% 108%;
+  text-shadow:
+  -1px -1px 0 #fff,
+  1px -1px 0 #fff,
+  -1px 1px 0 #fff,
+  1px 1px 0 #fff;
+  letter-spacing: 1px;
+
+  &:hover {
+    transform: scale(1.05);
+    transition-duration: 0.3s;
+    animation: glow .7s alternate linear infinite;
+  }
+}
+
+@keyframes glow {
+  0%   { 
+    border-color: white;
+  }
+  25% {
+    border-color: rgb(255, 255, 185);
+    box-shadow: 0 0 1px 1px rgb(255, 255, 185);
+    text-shadow:
+    -1px -1px 0 rgb(255, 255, 185),
+    1px -1px 0 rgb(255, 255, 185),
+    -1px 1px 0 rgb(255, 255, 185),
+    1px 1px 0 rgb(255, 255, 185);
+  }
+  50% {
+    border-color: rgb(255, 255, 125);
+    box-shadow: 0 0 2px 2px rgb(255, 255, 125);
+    text-shadow:
+    -1px -1px 0 rgb(255, 255, 125),
+    1px -1px 0 rgb(255, 255, 125),
+    -1px 1px 0 rgb(255, 255, 125),
+    1px 1px 0 rgb(255, 255, 125);
+  }
+  75% {
+    border-color: rgb(255, 255, 55);
+    box-shadow: 0 0 3px 3px rgb(255, 255, 55);
+    text-shadow:
+    -1px -1px 0 rgb(255, 255, 55),
+    1px -1px 0 rgb(255, 255, 55),
+    -1px 1px 0 rgb(255, 255, 55),
+    1px 1px 0 rgb(255, 255, 55);
+  }
+  100% { 
+    border-color: yellow;
+    box-shadow: 0 0 4px 4px yellow;
+    text-shadow:
+    -1px -1px 0 yellow,
+    1px -1px 0 yellow,
+    -1px 1px 0 yellow,
+    1px 1px 0 yellow;
+  }
 }
 
 .active {
@@ -19,14 +82,85 @@
 }
 
 .image-div {
-  width: 175px;
+  width: 107%;
   height: 175px;
-  border: solid yellow 3px;
+  position: relative;
+  overflow: hidden;
+  left: -10px;
+  transition-duration: 0.3s;
+  background-color: black;
+  border-radius: 20px;
+}
+
+.card:hover .image-div {
+  height: 180px;
+  transition-duration: 0.3s;
+  border-radius: 0;
+}
+
+.card:hover .image {
+  opacity: 1;
+  transition-duration: 0.5s;
 }
 
 .image {
-  object-fit: contain;
+  opacity: 0.7;
+  object-fit: cover;
   width: 100%;
   height: 100%;
+  transition-duration: 0.5s;
 }
 
+.fav-btn {
+  font-family: 'Russo One', arial, sans-serif;
+  letter-spacing: 2px;
+  font-size: 14px;
+  font-weight: bold;
+  background-color: white;
+  color: black;
+  width: 100%;
+  border: black 2px solid;
+  cursor: pointer;
+  outline: none;
+  border-radius: 10px;
+}
+
+.active {
+  animation: buttonGlow 1s alternate linear infinite;
+  border: 1px solid blue;
+  background-color: blue;
+  color: white;
+}
+
+.fav-btn-div {
+ width: 100%;
+ background-color: white;
+ border-radius: 10px;
+ margin: 0 auto;
+}
+
+@keyframes buttonGlow {
+  0% {
+    box-shadow: 0 0 1px 1px blue;
+    opacity: 1;
+  }
+
+  25% {
+    box-shadow: 0 0 2px 2px rgb(54, 54, 255);
+    opacity: 0.8;
+  }
+
+  50% {
+    box-shadow: 0 0 2px 3px rgb(191, 191, 245);
+    opacity: 1;
+  }
+
+  75% {
+    box-shadow: 0 0 3px 3px rgb(58, 58, 243);
+    opacity: 0.9;
+  }
+
+  100% {
+    box-shadow: 0 0 3px 2px blue;
+  }
+}
