--- a/src/Components/Card/Card.scss
+++ b/src/Components/Card/Card.scss
@@ -7,10 +7,11 @@
   -moz-border-radius: 20px;
   color: black;
   font-weight: bold;
-  width: 275px;
+  width: 280px;
   height: 415px;
   margin: 25px;
   padding: 10px;
+  // font-size: 17px;
   background-color: rgb(41, 41, 41);
   transition-duration: 0.3s;
   background-image: url('../../images/hallway.jpeg');
@@ -22,12 +23,34 @@
   -1px 1px 0 #fff,
   1px 1px 0 #fff;
   letter-spacing: 1px;
+  overflow: hidden;
 
   &:hover {
     transform: scale(1.05);
     transition-duration: 0.3s;
     animation: glow .7s alternate linear infinite;
   }
+}
+
+h2 {
+  margin-top: 30px;
+}
+
+.residents-p {
+  display: inline-block;
+  position: relative;
+  top: -15px;
+}
+
+select {
+  display: inline;
+  position: relative;
+  top: -15px;
+  left: 5px;
+}
+
+.short-space {
+  margin: 12px 0;
 }
 
 @keyframes glow {
@@ -87,24 +110,25 @@
   position: relative;
   overflow: hidden;
   left: -10px;
-  transition-duration: 0.3s;
+  transition-duration: .3s;
   background-color: black;
-  border-radius: 20px;
+  border-radius: 40px;
+  margin-top: -30px;
 }
 
 .card:hover .image-div {
   height: 180px;
-  transition-duration: 0.3s;
+  transition-duration: 0.5s;
   border-radius: 0;
 }
 
 .card:hover .image {
   opacity: 1;
-  transition-duration: 0.5s;
+  transition-duration: 0.7s;
 }
 
 .image {
-  opacity: 0.7;
+  opacity: 0.6;
   object-fit: cover;
   width: 100%;
   height: 100%;
@@ -123,20 +147,34 @@
   cursor: pointer;
   outline: none;
   border-radius: 10px;
+  transition-duration: 0.3s;
+
+  &:hover {
+    transform: scale(1.1);
+    transition-duration: 0.3s;
+  }
 }
 
 .active {
-  animation: buttonGlow 1s alternate linear infinite;
-  border: 1px solid blue;
-  background-color: blue;
-  color: white;
+  // animation: glow 1s alternate linear infinite;
+  // border: 1px solid blue;
+  // background-color: blue;
+  color: black;
+  background-color: yellow;
 }
 
 .fav-btn-div {
- width: 100%;
+ width: 50%;
  background-color: white;
  border-radius: 10px;
  margin: 0 auto;
+ display: flex;
+ bottom: 50px;
+ position: relative;
+ top: -85px;
+ left: 73px;
+ justify-content: center;
+ align-items: baseline;
 }
 
 @keyframes buttonGlow {
