--- a/src/Components/ScrollingText/ScrollingText.scss
+++ b/src/Components/ScrollingText/ScrollingText.scss
@@ -12,7 +12,7 @@
   position: relative;
   width: 100%;
   min-height: 60vh;
-  top: 0;
+  top: -205px;
   background-image: linear-gradient(0deg, transparent, black 75%);
   z-index: 1;
 }
