--- a/src/Components/Menu/Menu.scss
+++ b/src/Components/Menu/Menu.scss
@@ -49,7 +49,7 @@ li {
   background: gray;
   position: absolute;
   transition: all 0.3s ease;
-  transform: translate(0, 5px)
+  transform: translate(0, 20px)
 }
 
 .wing-tip1, .wing-tip2 {
@@ -75,23 +75,23 @@ li {
 }
 
 .open .wing-tip1 {
-  transform: rotate(30deg) translate(-9px, -14px);
+  transform: rotate(30deg) translate(-2.5px, -0.5px);
 }
 
 .open .wing-tip2 {
-  transform: rotate(-30deg) translate(-10px, 13px)
+  transform: rotate(-30deg) translate(-20px, 26px)
 }
 
 .open .wing-tip3 {
-  transform: rotate(-30deg) translate(9px, -14px)
+  transform: rotate(-30deg) translate(0.5px, -0.5px)
 }
 
 .open .wing-tip4 {
-  transform: rotate(30deg) translate(11px, 14px);
+  transform: rotate(30deg) translate(19px, 27px);
 }
 
 .open {
-  width: 750px;
+  width: 900px;
   border-radius: 20px;
 }
 
@@ -99,14 +99,24 @@ li {
   color: white;
 }
 
+.open ul span {
+  margin-left: 10px;
+  border-radius: 50%;
+  width: 34px;
+  color: #feda4a;
+  background: gray;
+}
+
 .bar {
   width: 65px;
   left: 25.5px;
+  display: initial;
   transition: all 0.3s ease;
 }
 
 .open .bar {
-  left: -200px;
+  transform: translate(0);
+  display: none;
 }
 
 .bar1 {
