--- a/src/Components/Menu/Menu.scss
+++ b/src/Components/Menu/Menu.scss
@@ -5,7 +5,6 @@
   display: flex;
   z-index: 99;
   justify-content: space-between;
-  padding-right: 50px;
 }
 
 .circle-menu {
@@ -124,11 +123,12 @@ li {
 
 .logo {
   color: white;
-  margin-top: 35px;
+  // margin-top: 35px;
   font-weight: bold;
   font-size: 50px;
   font-family: 'Press Start 2P', Russo One, arial, sans-serif;
   animation: glowLogo .7s alternate linear infinite;
+  letter-spacing: 2px;
 }
 
 @keyframes glowLogo {
