--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@ body {
   background: #000 center / cover url('images/stars-background.jpg');
   background-attachment: fixed;
   height: 100vh;
+  width: 90vw;
   overflow: auto;
   text-align: center;
 }
