--- a/src/Components/Menu/Menu.scss
+++ b/src/Components/Menu/Menu.scss
@@ -24,7 +24,7 @@
 }
 
 .circle-menu:hover {
-  background: rgba(70, 70, 70, 0.8);
+  background: rgba(97, 97, 97, 0.8);
 }
 
 .circle-menu ul {
@@ -105,7 +105,7 @@
 }
 
 .open {
-  width: 850px;
+  width: 800px;
   border-radius: 20px;
 }
 
@@ -144,11 +144,14 @@
 .logo {
   color: white;
   font-weight: bold;
-  font-size: 40px;
+  font-size: 45px;
   font-family: 'Jedi', Russo One, arial, sans-serif;
-  // animation: glowLogo .7s alternate linear infinite;
+  animation: glowLogo 2.7s alternate infinite linear;
   letter-spacing: 2px;
   cursor: pointer;
+  padding-right: 30px;
+  position: relative;
+  bottom: 15px;
 }
 
 #logo-container {
@@ -158,37 +161,79 @@
 @keyframes glowLogo {
   0%   {
     text-shadow:
-    -2px -2px 0 rgb(255, 255, 185),
-    2px -2px 0 rgb(255, 255, 185),
-    -2px 2px 0 rgb(255, 255, 185),
-    2px 2px 0 rgb(255, 255, 185);
+    -1px -1px 0 blue,
+    1px -1px 0 blue,
+    -1px 1px 0 blue,
+    1px 1px 0 blue;
   }
   25% {
     text-shadow:
-    -2px -2px 0 rgb(255, 255, 185),
-    2px -2px 0 rgb(255, 255, 185),
-    -2px 2px 0 rgb(255, 255, 185),
-    2px 2px 0 rgb(255, 255, 185);
+    -1px -1px 0 rgb(94, 94, 245),
+    1px -1px 0 rgb(174, 174, 248),
+    -1px 1px 0 rgb(116, 116, 243),
+    1px 1px 0 rgb(77, 77, 255);
   }
   50% {
     text-shadow:
-    -2px -2px 0 rgb(255, 255, 125),
-    2px -2px 0 rgb(255, 255, 125),
-    -2px 2px 0 rgb(255, 255, 125),
-    2px 2px 0 rgb(255, 255, 125);
+    -1px -1px 0 rgb(125, 255, 194),
+    1px -1px 0 rgb(125, 255, 194),
+    -1px 1px 0 rgb(125, 255, 194),
+    1px 1px 0 rgb(125, 255, 194);
   }
   75% {
     text-shadow:
-    -2px -2px 0 rgb(255, 255, 55),
-    2px -2px 0 rgb(255, 255, 55),
-    -2px 2px 0 rgb(255, 255, 55),
-    2px 2px 0 rgb(255, 255, 55);
+    -1px -1px 0 rgb(255, 255, 55),
+    1px -1px 0 rgb(255, 255, 55),
+    -1px 1px 0 rgb(255, 255, 55),
+    1px 1px 0 rgb(255, 255, 55);
+  }
+  83% {
+    text-shadow:
+    -1px -1px 0 rgb(255, 115, 0),
+    1px -1px 0 rgb(255, 115, 0),
+    -1px 1px 0 rgb(255, 115, 0),
+    1px 1px 0 rgb(255, 115, 0);
   }
   100% {
     text-shadow:
-    -2px -2px 0 yellow,
-    2px -2px 0 yellow,
-    -2px 2px 0 yellow,
-    2px 2px 0 yellow;
+    -1px -1px 0 rgb(255, 0, 0),
+    1px -1px 0 red,
+    -1px 1px 0 red,
+    1px 1px 0 red;
   }
  }
+
+@media only screen and (max-width: 1140px) {
+  .menu-container {
+    display: block;
+  }
+}
+
+@media only screen and (max-width: 820px) {
+  .open {
+    width: 300px;
+  }
+  .logo {
+    padding: 0;
+  }
+  .link {
+    font-size: 15px;
+    margin: 0;
+    padding: 0;
+    width: 50%;
+    margin: 5px 0 5px 90px;
+  }
+  .ul {
+    display: flex;
+    flex-direction: column;
+    margin-top: 45px;
+  }
+  .favorites-ctr {
+    font-size: 14px;
+    margin: 0;
+    padding: 0;
+    width: 5px;
+    display: inline;
+    float: left;
+  }
+}
